<resources>
    <string name="app_name">索骥二手车</string>
    <string name="log_in">登 陆</string>
    <string name="log_up">注册</string>
    <string name="tips_phone">输入11位手机号码</string>
    <string name="tips_password">输入6&#8211;12位密码</string>
    <string name="setting">设置</string>
    <string name="notification">通知</string>
    <string name="tips_login">立即登陆</string>
    <string name="tips_loading">加载中，请稍后&#8230;</string>
    <string name="tips_name">输入姓名</string>
    <string name="register">注册</string>
    <string name="tips_register">没有账户？注册</string>
    <string name="tips_searchCar">搜索您想要的车</string>
    <string name="quickSearch">快速找车</string>
    <string name="moreSelect">更多选择</string>
    <string name="tips_search">搜索您想要的车</string>
    <string name="tips_filter">筛选条件:</string>
    <string name="title_activity_logina">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_m">MActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_car_detail">CarDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
