<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <!--append layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal"
            android:gravity="end">
            <!--setting layout-->
            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:orientation="horizontal">
                <!--options button-->
                <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_setting"
                    android:backgroundTint="@color/grey_300"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_300"
                    android:text="@string/setting"/>

            </LinearLayout>
            <!--notification layout-->
            <LinearLayout
                android:id="@+id/ll_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:orientation="horizontal">
                <!--notification button-->
                <Button
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_message"
                    android:backgroundTint="@color/grey_300"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_300"
                    android:text="@string/notification"/>

            </LinearLayout>
        </LinearLayout>

        <!--login layout-->
        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_user_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_user_placeholder"/>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/grey_300"
                android:text="@string/tips_login"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="个人中心"/>

</LinearLayout>
